# cyberchipped-fold

./: LICENSE  README.md  install.sh  pyproject.toml
cyberchipped_fold/: batch.py  main.py  utils.py
cyberchipped_fold/core/: features.py  msa.py  prediction.py
cyberchipped_fold/mmseqs/: search.py
cyberchipped_fold/utils/: __init__.py  common.py
folding/: batch.py  main.py
folding/alphafold/: models.py
folding/core/: features.py  msa.py  prediction.py
folding/data/: templates.py
folding/mmseqs/: search.py
folding/models/: model_runner.py
folding/utils/: common.py  file_management.py
folding/visualization/: plots.py
tests/: mock.py  test_cyberchipped_fold.py  test_folding.py  test_msa.py  test_utils.py
